# pypura

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  add_fragrances.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: add-fragrances.yml  ci.yml  python-publish.yml  stale.yml
pypura/: __init__.py  const.py  exceptions.py  fragrances.json  pura.py  utils.py  ws_subscriber.py
scripts/: update_license_year.sh
tests/: test_const.py  test_init.py  test_utils.py
