[tool.poetry]
name = "pypura"
version = "0.0.0"
description = "Python package for interacting with Pura smart fragrance diffuser"
authors = ["Nathan Spencer <natekspencer@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["pypura/py.typed"]

[tool.poetry.dependencies]
python = ">3.9.1,<4"
boto3 = "^1.28"
pycognito = "^2024.2.0"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = ">=7.3.1,<9.0.0"
pytest-cov = ">=4,<8"
tox = "^4.5.1"
ruff = ">=0.5.0,<0.14"
pre-commit = "^4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.ruff.lint.isort]
force-sort-within-sections = true
forced-separate = ["tests"]
combine-as-imports = true
split-on-trailing-comma = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
