[project]
name = "pypura"
description = "Python package for interacting with Pura smart fragrance diffuser"
authors = [{ name = "Nathan Spencer", email = "natekspencer@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "boto3 (>=1.28)",
    "pycognito (>=2024.2.0)",
    "aiohttp (>=3.12.15)",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "mypy>=1.19.1,<2",
    "pytest>=7.3.1,<10.0.0",
    "pytest-cov>=4,<8",
    "tox>=4.34.1,<5",
    "ruff>=0.5.0,<0.15",
    "pre-commit>=4.5.1,<5",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.version]
path = "pypura/__init__.py"
pattern = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff.lint.isort]
force-sort-within-sections = true
forced-separate = ["tests"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.uv.build-backend]
source-include = ["pypura/py.typed"]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
